--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <main class="container">
         <section class="donate">
             <h2 class="donate__heading">Donate Today</h2>
-            <p class="donate__paragraph margin-top-15">With your support, we can build a sustainable future for all
-                people and the planet. Make a donation online today.</p>
+            <p class="donate__paragraph margin-top-15">With your support, we can provide life-saving support to flood
+                victims. Make a donation online today.</p>
             <div class="donate__amounts">
                 <div class="donate__amount">100tk</div>
                 <div class="donate__amount donate__amount--active">200tk</div>
