donate plan added

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
                 <a href="#" class="button margin-top-15">Donate Now</a>
             </div>
         </section>
+
+        <section class="plan">
+            <h2 class="plan__heading">Our Donate Plan</h2>
+            <p class="plan__paragraph margin-top-15">With your support, we can provide life-saving support to flood
+                victims. Make a donation online today.</p>
+            <div class="plan__items">
+                <div class="plan__item">
+                    <img class="plan__img" src="./img/icons/food.png" alt="food support icon">
+                    <h3 class="plan__title">Food For A Family</h3>
+                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
+                        delectus tempora.</p>
+                </div>
+            </div>
+        </section>
+
         <section style="height: 200px;"></section>
     </main>
 </body>
