gallery section added

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 <body>
     <section class="header">
         <div class="header__content">
-            <h1 class="header__heading">Let’s Help Those Who Are More In Need</h1>
-            <p class="header__paragraph margin-top-15">Millions of people across Bangladesh are left stranded due to
+            <h1 class="header__title">Let’s Help Those Who Are More In Need</h1>
+            <p class="header__sub-title margin-top-15">Millions of people across Bangladesh are left stranded due to
                 monsoon floods. Donate today for provide life-saving support.</p>
             <a href="#" class="button margin-top-20">Donate Now</a>
         </div>
     </section>
     <main class="container">
-        <section class="donate">
-            <h2 class="donate__heading">Donate Today</h2>
-            <p class="donate__paragraph margin-top-15">With your support, we can provide life-saving support to flood
+        <section class="section donate">
+            <h2 class="section__heading">Donate Today</h2>
+            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
                 victims. Make a donation online today.</p>
             <div class="donate__amounts">
                 <div class="donate__amount">100tk</div>
@@ -39,22 +39,59 @@
             </div>
         </section>
 
-        <section class="plan">
-            <h2 class="plan__heading">Our Donate Plan</h2>
-            <p class="plan__paragraph margin-top-15">With your support, we can provide life-saving support to flood
+        <section class="section plan">
+            <h2 class="section__heading">Our Donate Plan</h2>
+            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
                 victims. Make a donation online today.</p>
             <div class="plan__items">
-                <div class="plan__item">
+                <div class="plan__item plan__item--1">
                     <img class="plan__img" src="./img/icons/food.png" alt="food support icon">
                     <h3 class="plan__title">Food For A Family</h3>
                     <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
                         delectus tempora.</p>
                 </div>
+                <div class="plan__item plan__item--2">
+                    <img class="plan__img" src="./img/icons/shelter.png" alt="food support icon">
+                    <h3 class="plan__title">Shelter For A Family </h3>
+                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
+                        delectus tempora.</p>
+                </div>
+                <div class="plan__item plan__item--3">
+                    <img class="plan__img" src="./img/icons/Frame-1.png" alt="food support icon">
+                    <h3 class="plan__title">Education For A Child</h3>
+                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
+                        delectus tempora.</p>
+                </div>
             </div>
         </section>
-
-        <section style="height: 200px;"></section>
+        <section class="section gallery">
+            <h2 class="section__heading">Our Donation Gallery</h2>
+            <p class="section__text margin-top-15">A glance at our donation process.</p>
+            <div class="gallery__photos">
+                <img class="gallery__photo" src="./img/images/donation0.jpg" alt="donation photo">
+                <img class="gallery__photo" src="./img/images/donation1.jpg" alt="donation photo">
+                <img class="gallery__photo" src="./img/images/donation2.jpg" alt="donation photo">
+                <img class="gallery__photo" src="./img/images/donation11.jpg" alt="donation photo">
+                <img class="gallery__photo" src="./img/images/donation10.jpg" alt="donation photo">
+                <img class="gallery__photo" src="./img/images/donation5.jpg" alt="donation photo">
+            </div>
+        </section>
+        <section class="newsletter section">
+            <h2 class="section__heading">Get Our Updates</h2>
+            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
+                victims. Make a donation online today.</p>
+            <form action="#" class="newsletter__form">
+                <input class="newsletter__input" type="email" name="email" placeholder="Email" autocomplete="off">
+                <button class="newsletter__button" type="submit">Subscribe</button>
+            </form>
+        </section>
     </main>
+    <footer class="footer">
+        <div class="footer__content">
+            <p class="footer__logo">Be Humble</p>
+            <p class="footer__copyright">&copy; 2022 Be Humble. All Rights Reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
