--- a/index.html
+++ b/index.html
@@ -13,18 +13,24 @@
 </head>
 
 <body>
+    <!-- Header Section -->
     <section class="header">
-        <div class="header__content">
-            <h1 class="header__title">Let’s Help Those Who Are More In Need</h1>
-            <p class="header__sub-title margin-top-15">Millions of people across Bangladesh are left stranded due to
-                monsoon floods. Donate today for provide life-saving support.</p>
-            <a href="#" class="button margin-top-20">Donate Now</a>
+        <div class="container">
+            <div class="header__content">
+                <h1 class="header__title">Let’s Help Those Who Are More In Need</h1>
+                <p class="header__sub-title">Millions of people across Bangladesh are left stranded due to
+                    monsoon floods. Donate today for provide life-saving support.</p>
+                <a href="#" class="button">Donate Now</a>
+            </div>
         </div>
     </section>
+
+    <!-- Main Content -->
     <main class="container">
+        <!-- Donate Section -->
         <section class="section donate">
-            <h2 class="section__heading">Donate Today</h2>
-            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
+            <h2 class="section__title">Donate Today</h2>
+            <p class="section__sub-title">With your support, we can provide life-saving support to flood
                 victims. Make a donation online today.</p>
             <div class="donate__amounts">
                 <div class="donate__amount">100tk</div>
@@ -35,13 +41,14 @@
             </div>
             <div class="donate__custom">
                 <input class="donate__input " type="text" placeholder="Other Amount (Taka)">
-                <a href="#" class="button margin-top-15">Donate Now</a>
+                <a href="#" class="button">Donate Now</a>
             </div>
         </section>
 
+        <!-- Plan Section -->
         <section class="section plan">
-            <h2 class="section__heading">Our Donate Plan</h2>
-            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
+            <h2 class="section__title">Our Donate Plan</h2>
+            <p class="section__sub-title">With your support, we can provide life-saving support to flood
                 victims. Make a donation online today.</p>
             <div class="plan__items">
                 <div class="plan__item plan__item--1">
@@ -64,9 +71,11 @@
                 </div>
             </div>
         </section>
+
+        <!-- Gallery Section -->
         <section class="section gallery">
-            <h2 class="section__heading">Our Donation Gallery</h2>
-            <p class="section__text margin-top-15">A glance at our donation process.</p>
+            <h2 class="section__title">Our Donation Gallery</h2>
+            <p class="section__sub-title">A glance at our donation process.</p>
             <div class="gallery__photos">
                 <img class="gallery__photo" src="./img/images/donation0.jpg" alt="donation photo">
                 <img class="gallery__photo" src="./img/images/donation1.jpg" alt="donation photo">
@@ -76,9 +85,11 @@
                 <img class="gallery__photo" src="./img/images/donation5.jpg" alt="donation photo">
             </div>
         </section>
+
+        <!-- Newsletter Section -->
         <section class="newsletter section">
-            <h2 class="section__heading">Get Our Updates</h2>
-            <p class="section__text margin-top-15">With your support, we can provide life-saving support to flood
+            <h2 class="section__title">Get Our Updates</h2>
+            <p class="section__sub-title">With your support, we can provide life-saving support to flood
                 victims. Make a donation online today.</p>
             <form action="#" class="newsletter__form">
                 <input class="newsletter__input" type="email" name="email" placeholder="Email" autocomplete="off">
@@ -86,6 +97,8 @@
             </form>
         </section>
     </main>
+
+    <!-- Footer Section -->
     <footer class="footer">
         <div class="footer__content">
             <p class="footer__logo">Be Humble</p>
