--- a/index.html
+++ b/index.html
@@ -48,26 +48,27 @@
         <!-- Plan Section -->
         <section class="section plan">
             <h2 class="section__title">Our Donate Plan</h2>
-            <p class="section__sub-title">With your support, we can provide life-saving support to flood
-                victims. Make a donation online today.</p>
+            <p class="section__sub-title">By your donation we provide food, build shelter and ensure children education.
+            </p>
             <div class="plan__items">
                 <div class="plan__item plan__item--1">
                     <img class="plan__img" src="./img/icons/food.png" alt="food support icon">
                     <h3 class="plan__title">Food For A Family</h3>
-                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
-                        delectus tempora.</p>
+                    <p class="plna__text">You can provide food for a family. Your donation will spend on a whole family
+                        food supply.</p>
                 </div>
                 <div class="plan__item plan__item--2">
                     <img class="plan__img" src="./img/icons/shelter.png" alt="food support icon">
                     <h3 class="plan__title">Shelter For A Family </h3>
-                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
-                        delectus tempora.</p>
+                    <p class="plna__text">We build shelter for flood affected family. You can contribute with us for
+                        build shelter and support them.
+                    </p>
                 </div>
                 <div class="plan__item plan__item--3">
                     <img class="plan__img" src="./img/icons/Frame-1.png" alt="food support icon">
                     <h3 class="plan__title">Education For A Child</h3>
-                    <p class="plna__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat temporibus
-                        delectus tempora.</p>
+                    <p class="plna__text">By donating you can ensure there children education. We rebuild schools
+                        and provide them education support.</p>
                 </div>
             </div>
         </section>
@@ -75,7 +76,8 @@
         <!-- Gallery Section -->
         <section class="section gallery">
             <h2 class="section__title">Our Donation Gallery</h2>
-            <p class="section__sub-title">A glance at our donation process.</p>
+            <p class="section__sub-title">Our volunteers working hard to distribute your Donation. Here is a glance at
+                our donation process.</p>
             <div class="gallery__photos">
                 <img class="gallery__photo" src="./img/images/donation0.jpg" alt="donation photo">
                 <img class="gallery__photo" src="./img/images/donation1.jpg" alt="donation photo">
@@ -89,8 +91,8 @@
         <!-- Newsletter Section -->
         <section class="newsletter section">
             <h2 class="section__title">Get Our Updates</h2>
-            <p class="section__sub-title">With your support, we can provide life-saving support to flood
-                victims. Make a donation online today.</p>
+            <p class="section__sub-title">To get all kind of our working updates, you can subscribe to our weekly
+                newsletter. Thank You.</p>
             <form action="#" class="newsletter__form">
                 <input class="newsletter__input" type="email" name="email" placeholder="Email" autocomplete="off">
                 <button class="newsletter__button" type="submit">Subscribe</button>
