--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="plan__item plan__item--3">
                     <img class="plan__img" src="./img/icons/Frame-1.png" alt="food support icon">
                     <h3 class="plan__title">Education For A Child</h3>
-                    <p class="plna__text">By donating you can ensure there children education. We rebuild schools
+                    <p class="plna__text">By donating you can ensure children education. We rebuild schools
                         and provide them education support.</p>
                 </div>
             </div>
